--- a/client/src/components/CatCard/style.css
+++ b/client/src/components/CatCard/style.css
@@ -11,6 +11,11 @@
     position: relative;
 }
 
+.catCard:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.24), 0px 9px 18px rgba(0, 0, 0, 0.18);
+}
+
 .heart {
     position: absolute;
     right: 28px;
