--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -3,6 +3,7 @@
     width: 100%;
     background-color: #2196F3;
     margin-bottom: 48px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
 }
 
 .navbar {
